add root element font size and convert to rem and em

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Style Guide</title>
-    <!-- <link rel="stylesheet" href="main.css"> -->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/OxfordAbstracts/styleguide/master/main.css">
+
+    <!-- Local Development -->
+    <link rel="stylesheet" href="main.css">
+
+    <!-- Production Test -->
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/OxfordAbstracts/styleguide/master/main.css"> -->
     
 
 </head>
