event navbar with flexbox

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 <a href="#0" class="btn btn--sm second">Cancel</a>
 <a href="#0" class="btn btn--sm tert">Edit</a>
 
+<br><br><br>
+
+<div class="nav__container">
+    <ul class="nav">
+        <li class="nav__item nav__item--active"><a href="#0">Overview</a></li>
+        <li class="nav__item"><a href="#0">Submission</a></li>
+        <li class="nav__item"><a href="#0">Programme</a></li>
+        <li class="nav__item"><a href="#º">Settings</a></li>
+    </ul>
+</div>
 
 </body>
 </html>
